--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,7 +18,7 @@ body.load {
   .page-wrapper{
       position: absolute;
   min-height: 100vh;
-  height: 100vh;
+  /* height: 100vh; */
   width: 100%;
   top: 0;
   }
